syntax = "proto3";
package rocksdb_example;

service Rocksdb{
    rpc put (PutRequest) returns (PutResponse){}
    rpc get (GetRequest) returns (GetResponse){}

}

message PutRequest{
    string key= 1 ;
    string value = 2;
}

message PutResponse{
    bool OK = 1;
}

message GetRequest{
    string key = 1;
}

message GetResponse{
    string key=1;
    string value=2;
}